@@ -27,8 +27,6 @@ import gtk
 import xml.dom.minidom as dom
 import datetime
 
-CONFIG_FILE_NAME = 'labyrinth.cfg'
-
 class MapList(object):
 	COL_ID = 0
 	COL_TITLE = 1
@@ -106,8 +104,7 @@ class MapList(object):
 	@classmethod
 	def load_all_from_dir(cls,dir):
 		for f in os.listdir(dir):
-			if f != CONFIG_FILE_NAME:
-				cls.new_from_file(dir+f)
+			cls.new_from_file(dir+f)
 
 	@classmethod
 	def new_from_file(cls, filename):
